# whisper-diarization-streamlit

./: .gitignore  README.md  install_poetry.sh  pyproject.toml  pyrightconfig.json
backend/: app.py  diarize_parallel.py  main.py
backend/whisper-diarization/: .gitrepo
frontend/: app.py  test_js.py
frontend/.streamlit/: config.toml
